--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
      <img src="ear-icon-hearing-symbol-isolated-260nw-1677188827.jpeg" id="alien1" width="300" height="300"> 
     </center>
   </div>
-<script src="main.js"></script>
-  </body>
-</html>
-
+  <div id="div_footer" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    Created by: <span id="footer">Sabarish Venkatachalam </span>
+   </div>
+ <script src="main.js"></script>
+   </body>
+ </html>
+ 
 
 
 
