--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
      <h4 id="result_accuracy"> Accuracy</h4>
      <br>
      <hr>
-     <img src="ear-icon-hearing-symbol-isolated-260nw-1677188827.jpeg" id="alien1" width="300" height="300"> 
+     <img src="ear-icon-hearing-symbol-isolated-260nw-1677188827.jpeg" id="hear" width="300" height="300"> 
+     <img src="dog.jpeg" id="dog" width="300" height="300"> 
+     <img src="cat.jpeg" id="cat" width="300" height="300">
+     <img src="bear.jpeg" id="bear" width="300" height="300">
     </center>
   </div>
   <div id="div_footer" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
